Wed Feb 29 07:25:21 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Handle_Set.cpp:
        * ace/Select_Reactor_Base.cpp:
        * ace/Service_Types.cpp:
          Fixed coverity errors

Tue Feb 28 14:35:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
          Fixed coverity error

Tue Feb 28 03:27:28 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        *
          apps/JAWS3/jaws3/Reactive_IO.cpp (JAWS_IO_Reactive_Transmit::handle_output_source):
          Check mb == 0 before using it.  Thanks to Andrey Karpov <karpov
          at viva64 dot com> for reporting this.

Tue Feb 28 03:18:56 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Throughput_Stats.cpp (ACE_Throughput_Stats::sample): Zapped
          a redundant else statement.  Thanks to Andrey Karpov <karpov at
          viva64 dot com> for reporting this.

Tue Feb 28 03:15:37 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * protocols/ace/INet/URLBase.cpp (ACE): Changed

          if (pos > 0 && url_string[pos+1] == '/' && url_string[pos+1] == '/')

          to

          if (pos > 0 && url_string[pos+1] == '/' && url_string[pos+2] == '/')

          Thanks to Andrey Karpov <karpov at viva64 dot com> for reporting
          this.

Mon Feb 27 08:11:06 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/rle/RLECompressor.h:
          Doxygen fix

        * ace/Compression/rle/RLECompressor.cpp:
          Fixed gcc warning

Fri Feb 24 09:19:40 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/Compressor.h:
          Fixed compile warning

Fri Feb 24 09:14:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/Compressor.h:
        * ace/Compression/Compressor.cpp:
        * ace/Compression/rle/RLECompressor.h:
        * ace/Compression/rle/RLECompressor.cpp:
          Added virtual destructors
